--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="drone.css">
     <link rel="stylesheet" href="../CSS/all.min.css">
-    <title>DP-Mail</title>
+    <title>DP-Maiiiiiil</title>
 </head>
 <body>
     <!--Navbar Section-->
